resources/assets/styles/layouts/_story.scss
.page-story {
  background-color: $smokeyx;

  &--header {
    margin-top: $golden-ratio-4;
    margin-bottom: $golden-ratio-4;
    position: absolute;
    width: 100%;
    overflow: hidden;
    display: flex;
    z-index: 0;
    justify-content: center;

    @include respond(xs, sm) {
      margin-top: 0;
    }

    &--title {
      text-align: center;
      position: absolute;
      z-index: 1;
      width: 100%;
      margin-top: $golden-ratio-5;

      @include respond(sm, xs) {
        margin-top: $golden-ratio-4;
      }

      h1 {
        font-size: $type-6;
        letter-spacing: -0.047em;
        font-weight: 700;
        -webkit-font-smoothing: subpixel-antialiased;
        margin: 0 0 $golden-ratio-2;
        display: flex;
        flex-direction: column;
        align-items: center;
        align-content: center;
        justify-content: center;

        @include respond(xs) {
          font-size: $type-5;
        }
      }

      h2 {
        font-size: $type-3;
        letter-spacing: 0.047em;
        font-weight: 400;
        text-transform: uppercase;
        -webkit-font-smoothing: antialiased;
        margin: 0;
        color: $smokey;

        @include respond(xs) {
          font-size: $type-2;
          padding: 0 $golden-ratio-3;
        }
      }
    }

    &--background {
      width: 100%;
      margin-top: -10vw;
      min-width: 768px;

      @include respond(md) {
        margin-top: -5vw;
      }

      @include respond(xs, sm) {
        margin: 0 auto;
      }
    }
  }

  &--grain {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    display: none;

    &--fade-in {
      width: 100%;
      height: 40%;
      top: 0;
      left: 0;
      position: absolute;

      @include filter-gradient(rgba($white, 1), 0, rgba($white, 0), 100%);
    }

    &--fade-out {
      width: 100%;
      height: 60%;
      bottom: 0;
      left: 0;
      position: absolute;
      display: none;

      @include filter-gradient(rgba($smokeyx, 0), 0, rgba($smokeyx, 1), 100%);
    }
  }
}

body.page-story {
  .aside-subsite-custom-widgets,
  .utk-section.section-callout {
    display: none;
  }
}

.page-body--story {
  position: relative;
  z-index: 1;
  color: $white;
  padding: 550px 0 $golden-ratio-5;

  @include respond(sm) {
    padding-top: 400px;
  }

  @include respond(xs) {
    padding-top: 322px;
  }

  h2,
  h3 {
    color: $gray-1 !important;
    font-weight: 400 !important;
    display: inline-flex;
    font-size: $type-4 !important;
    text-shadow: $box-shadow-float;
    -webkit-font-smoothing: antialiased !important;

    &:first-child {
      margin-top: 0;
    }
  }

  p {
    -webkit-font-smoothing: antialiased;
    font-size: $type-3;

    @include respond(xs) {
      font-size: $type-2;
    }
  }

  a,
  a:visited,
  a:hover,
  a:focus {
    color: $white;
    text-decoration: underline;
  }

  figure {
    margin: 0;

    img {
      box-shadow: $box-shadow-float-submenu;
    }

    figcaption {
      font-size: $type-1;
      color: $gray-1;
      -webkit-font-smoothing: antialiased;
    }
  }

  .wp-block-columns {
    justify-content: space-between;

    @include respond(xs) {
      &:first-child {
        flex-direction: column-reverse;
      }
    }

    .wp-block-column {
      flex-basis: calc(50% - 33px);
      margin-left: 0;
    }
  }

  .utk-story--contact {
    p,
    li,
    ol {
      font-size: $type-2;
    }

    a,
    a:visited,
    a:hover,
    a:focus {
      color: $white;
      text-decoration: underline;
    }

    .wp-block-columns {
      &:last-child {
        margin-bottom: 0;
      }
    }
  }

  .gform_wrapper {
    label.gfield_label {
      color: $white;
      font-size: $type-2;
    }

    input {
      color: $smokey;
      font-size: $type-2;

      &.gform_button {
        @extend .btn;
        @extend .btn-outline;
        @extend .btn-inverse;
        @extend .btn-secondary;

        color: $gray-1 !important;
        cursor: pointer;
      }
    }

    .ginput_container {
      label {
        color: $gray-1;
        font-size: $type-1 !important;
        letter-spacing: -0.018em !important;
      }
    }
  }
}

